--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,8 @@ requestAuthorizerBeanName=defaultRequestAuthorizer
 
 removeDemoConnections=false
 
-spring.datasource.driverClassName=org.postgis.DriverWrapper
-spring.datasource.url=jdbc:postgresql_postGIS://127.0.0.1:5432/kimsanghoon
-spring.datasource.username=kimsanghoon
-spring.datasource.password=18925
+spring.datasource.driverClassName=triton.jdbc.driver.TritonDriver
+spring.datasource.url=jdbc:triton://220.74.32.5:9797/test?Unicode=true&characterEncoding=euckr
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
