--- a/src/main/resources/spy.properties
+++ b/src/main/resources/spy.properties
@@ -51,10 +51,10 @@ module.log=com.p6spy.engine.logging.P6LogFactory
 # realdriver=COM.ibm.db2.jdbc.net.DB2Driver
 
 # the mysql open source driver
-realdriver=triton.jdbc.driver.TritonDriver
+#realdriver=triton.jdbc.driver.TritonDriver
 
-#specifies another driver to use
-#realdriver2=
+#specifies another driver to useㅁㄴㅇ
+realdriver2=org.postgis.DriverWrapper
 #specifies a third driver to use
 #realdriver3=
 
@@ -75,10 +75,10 @@ deregisterdrivers=true
 ################################################################
 # EXECUTION THRESHOLD PROPERTIES                               #
 ################################################################
-# This feature applies to the standard logging of P6Spy.       # 
+# This feature applies to the standard logging of P6Spy.       #
 # While the standard logging logs out every statement          #
-# regardless of its execution time, this feature puts a time   # 
-# condition on that logging.  Only statements that have taken  # 
+# regardless of its execution time, this feature puts a time   #
+# condition on that logging.  Only statements that have taken  #
 # longer than the time specified (in milliseconds) will be     #
 # logged.  This way it is possible to see only statements that #
 # have exceeded some high water mark.                          #
@@ -98,7 +98,7 @@ executionthreshold=
 # statement that surpasses the configurable time boundary during its execution.
 # When this feature is enabled, no other statements are logged except the long
 # running statements. The interval property is the boundary time set in seconds.
-# For example, if this is set to 2, then any statement requiring at least 2 
+# For example, if this is set to 2, then any statement requiring at least 2
 # seconds will be logged. Note that the same statement will continue to be logged
 # for as long as it executes. So if the interval is set to 2, and the query takes
 # 11 seconds, it will be logged 5 times (at the 2, 4, 6, 8, 10 second intervals).
@@ -117,12 +117,12 @@ outagedetectioninterval=
 filter=false
 
 # comma separated list of tables to include when filtering
-include     = 
+include     =
 # comma separated list of tables to exclude when filtering
 exclude     =
 
 # sql expression to evaluate if using regex filtering
-sqlexpression = 
+sqlexpression =
 
 
 # turn on tracing
@@ -131,7 +131,7 @@ autoflush   = true
 # sets the date format using Java's SimpleDateFormat routine
 dateformat=
 
-#list of categories to explicitly include 
+#list of categories to explicitly include
 includecategories=
 
 #list of categories to exclude: error, info, batch, debug, statement,
@@ -139,7 +139,7 @@ includecategories=
 excludecategories=info,debug,result,batch
 
 
-#allows you to use a regex engine or your own matching engine to determine 
+#allows you to use a regex engine or your own matching engine to determine
 #which statements to log
 #
 #stringmatcher=com.p6spy.engine.common.GnuRegexMatcher
@@ -203,7 +203,7 @@ log4j.logger.p6spy=INFO,STDOUT
 #################################################################
 # DataSource properties                                         #
 #                                                               #
-# If you are using the DataSource support to intercept calls    # 
+# If you are using the DataSource support to intercept calls    #
 # to a DataSource that requires properties for proper setup,    #
 # define those properties here. Use name value pairs, separate  #
 # the name and value with a semicolon, and separate the         #
