--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,15 +8,19 @@
   },
   "dependencies": {
     "cleave.js": "^1.5.3",
+    "ol": "^6.1.1",
     "plotly.js": "^1.50.1",
     "popper.js": "^1.16.0",
+    "proj4": "^2.5.0",
     "register-service-worker": "^1.6.2",
+    "sql-parser": "^0.5.0",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-cleave": "^1.2.2",
     "vue-color": "^2.7.0",
     "vue-router": "^3.1.3",
     "vuedraggable": "^2.23.2",
+    "vuelayers": "^0.11.16",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1",
     "wkx": "^0.4.8",
