--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-spatial</artifactId>
+            <version>5.2.5.Final</version>
+        </dependency>
 
         <!-- 새로추가 -->
         <!--<dependency>-->
@@ -428,7 +432,7 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/fop.jar</systemPath>
         </dependency>
-        
+
         <dependency>
             <groupId>com.gtapi</groupId>
             <artifactId>gtapi</artifactId>
