--- a/src/main/resources/mondrian.properties
+++ b/src/main/resources/mondrian.properties
@@ -1,3 +1,3 @@
 # no default jdbc drivers, avoids warning log messages
-mondrian.jdbcDrivers=org.apache.hive.jdbc.HiveDriver
+mondrian.jdbcDrivers=triton.jdbc.driver.TritonDriver
 mondrian.olap.case.sensitive=true
